--- a/backup_linux_plex.config
+++ b/backup_linux_plex.config
@@ -5,14 +5,14 @@
 #-------------------------------------------------------------------------
 
 # Set location to save tgz file to
-Backup_Directory="/share/Backups/Plex_Backup"
+Backup_Directory=/share/Backups/Plex_Backup
 
 # The script gets the distro and hostname for logging and the backup file name. 
-# Set Name= to "distro", "hostname" or some nickname.
-# If Name= is blank the Asustor's hostname will be used.
-Name="distro"
+# Set Name= to distro, hostname or set it to a 'nickname'.
+# If Name= is blank the computer's hostname will be used.
+Name=distro
 
 # Log all files backed up.
-# Set LogAll= to "yes" or "no". Blank is the same as no.
-LogAll="no"
+# Set LogAll= to yes or no. Blank is the same as no.
+LogAll=no
 
