--- a/backup_linux_plex.config
+++ b/backup_linux_plex.config
@@ -4,7 +4,7 @@
 # https://github.com/007revad/Linux_Plex_Backup
 #-------------------------------------------------------------------------
 
-# Set location to save tgz file to
+# Set location to save tgz file to.
 Backup_Directory=/share/Backups/Plex_Backup
 
 # The script gets the distro and hostname for logging and the backup file name. 
@@ -15,4 +15,8 @@ Name=distro
 # Log all files backed up.
 # Set LogAll= to yes or no. Blank is the same as no.
 LogAll=no
+
+# Delete old backups.
+# Set KeepQty= to the number of backups to keep.
+KeepQty=5
 
