--- a/backup_linux_plex.config
+++ b/backup_linux_plex.config
@@ -16,6 +16,11 @@ Name=distro
 # Set LogAll= to yes or no. Blank is the same as no.
 LogAll=no
 
+# Email log. Requires LogAll=yes
+# Uses msmtp to send the email.
+to_email_address=email@email.com
+from_email_address=email@email.com
+
 # Delete old backups.
 # Set KeepQty= to the number of backups to keep.
 KeepQty=5
