--- a/backup_linux_plex.config
+++ b/backup_linux_plex.config
@@ -18,8 +18,8 @@ LogAll=no
 
 # Email log. Requires LogAll=yes
 # Uses msmtp to send the email.
-to_email_address=email@email.com
-from_email_address=email@email.com
+to_email_address=
+from_email_address=
 
 # Delete old backups.
 # Set KeepQty= to the number of backups to keep.
