Add snap installation option to config
Add option to specify if installed in snap.

--- a/backup_linux_plex.config
+++ b/backup_linux_plex.config
@@ -12,6 +12,9 @@ Backup_Directory=/share/Backups/Plex_Backup
 # If Name= is blank the computer's hostname will be used.
 Name=distro
 
+# Set to yes if installed in snap
+snap=no
+
 # Log all files backed up.
 # Set LogAll= to yes or no. Blank is the same as no.
 LogAll=no
