Add optional Plex configuration overrides
Added optional overrides for Plex data path and service name.

--- a/backup_linux_plex.config
+++ b/backup_linux_plex.config
@@ -15,6 +15,10 @@ Name=distro
 # Set to yes if installed in snap
 snap=no
 
+# Optional overrides
+Plex_Data_Path=
+Plex_Service_Name=plexmediaserver
+
 # Log all files backed up.
 # Set LogAll= to yes or no. Blank is the same as no.
 LogAll=no
