Enhance comments for backup configuration clarity
Added comments to clarify the Name setting for backups.

--- a/backup_linux_plex.config
+++ b/backup_linux_plex.config
@@ -9,6 +9,10 @@ Backup_Directory=/share/Backups/Plex_Backup
 
 # The script gets the distro and hostname for logging and the backup file name. 
 # Set Name= to distro, hostname or set it to a 'nickname'.
+# Name controls the prefix in backup filenames:
+#   distro   : use kernel hostname from uname
+#   hostname : use $(hostname)
+#   other    : literal nickname
 # If Name= is blank the computer's hostname will be used.
 Name=distro
 
