Add safety snapshot option
Added a new option for safety snapshot.

--- a/backup_linux_plex.config
+++ b/backup_linux_plex.config
@@ -19,7 +19,7 @@ Name=distro
 # Set to yes if installed in snap
 snap=no
 
-# Optional overrides
+# Optional overrides.
 Plex_Data_Path=
 Plex_Service_Name=plexmediaserver
 
@@ -36,3 +36,6 @@ from_email_address=
 # Set KeepQty= to the number of backups to keep.
 KeepQty=5
 
+# Create current backup before restoring.
+# Set to yes or no, or blank
+Create_Safety_Snapshot= 
