Update email log description in backup config
Clarified email log functionality in configuration.

--- a/backup_linux_plex.config
+++ b/backup_linux_plex.config
@@ -27,7 +27,7 @@ Plex_Service_Name=plexmediaserver
 # Set LogAll= to yes or no. Blank is the same as no.
 LogAll=no
 
-# Email log. Requires LogAll=yes
+# Email log. If both addresses are set, a log is emailed after each run.
 # Uses msmtp to send the email.
 to_email_address=
 from_email_address=
